# ShellPa

./: .gitignore  LICENSE  PROJECT.md  README.md  main.py  pyproject.toml
ai/: __init__.py  cli.py  manager.py
cheatsheet/: __init__.py  cli.py  manager.py
dashboard/: __init__.py  cli.py  manager.py
dotfiles/: __init__.py  cli.py  manager.py
sync/: __init__.py  cli.py  manager.py
tests/: conftest.py  test_ai.py  test_cheatsheet.py  test_dashboard.py  test_dotfiles.py  test_sync.py
